    both flags is the empty list.

    Corrected a bug when compiling calls to Prolog proprietary built-in meta-
    predicates where the Logtalk compiler could attempt to process non meta-
    arguments as goals. This bug only manifested itself with some back-end
    Prolog compilers such as ECLiPSe.

    Corrected a bug in the processing of conditional compilation directives.

    Removed from the built-in object "logtalk" the decompile_predicate_head/4
    and decompile_predicate_indicator/4 deprecated methods.

    Removed support for the long deprecated Logtalk metapredicate/1 directive.

    Corrected a performance bug when caching calls to category predicates where
    the cached entries could be more specific than necessary when working with
    parametric categories.

    Improved caching of "super" calls from within prototypes. Previously, all
    cached entries would be specialized by the value of "self" in order to
    properly deal with the special cases where an object both instantiates and
    specializes other objects.

    Updated the Logtalk compiler to activate any operator declarations found
    on predicate scope directives during the compilation of the entities that
    contain the directives.

    Improved the performance of coinductive predicates when using back-end
    Prolog compilers such as SICStus Prolog that don't provide the soft-cut
    control construct but provide the soft-cut built-in meta-predicate (if/3).

    Corrected a bug where a spurious report of compilation/loading warnings
    could be printed when a source file was compiled/loaded with the compiler
    flag "report" turned off.

    Added a "streamvars" library object, derived from the existing "assignvars"
    library category, featuring support for adding and retrieving terms (which
    may be variables) from a "stream" variable.

    Updated the "coinduction" example, taking advantage of the enhanced